--- a/test.html
+++ b/test.html
@@ -29,4 +29,62 @@
       <p>Lorem ipsum...</p>
     </div>
   </div>
+  <form>
+            <fieldset>
+                <legend>
+                    User personal information
+                </legend>
+                <label
+                    >Enter your full name</label
+                >
+                <input type="text" name="name" />
+                <label>Enter your email</label>
+                <input
+                    type="email"
+                    name="email"
+                />
+                <label>Enter your password</label>
+                <input
+                    type="password"
+                    name="pass"
+                />
+                <label
+                    >Confirm your password</label
+                >
+                <input
+                    type="password"
+                    name="confirmPass"
+                />
+                <label>Enter your gender</label>
+                <input
+                    type="radio"
+                    name="gender"
+                    value="male"
+                />Male
+                <input
+                    type="radio"
+                    name="gender"
+                    value="female"
+                />Female
+                <input
+                    type="radio"
+                    name="gender"
+                    value="others"
+                />Others
+                <label
+                    >Enter your Date of
+                    Birth</label
+                >
+                <input type="date" name="dob" />
+              <input
+                    type="submit"
+                    value="submit"
+                />
+                <label>Enter your Address:</label>
+                <textarea
+                    name="address"
+                ></textarea>
+                
+            </fieldset>
+        </form>
 </div>
