--- a/downloads.html
+++ b/downloads.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <a id="testAnchor" style="display: block; height: 100%; width: 100%" download="test_blob_download.txt">Download BLOB file</a>
+        <a id="testAnchor" download="test_blob_download.txt">Download BLOB file</a>
 
         <p>Download PDF</p>  
         <ul>
