--- a/downloads.html
+++ b/downloads.html
@@ -16,6 +16,8 @@
           <li><a href="#" class="init-iframe-download" data-type="pdf" >Init iframe PDF load</a>
         </ul>
         <div id="iframe-container"></div>
+
+        <a href="https://www.whatismybrowser.com/detect/what-http-headers-is-my-browser-sending/" target="_blank">What are my headers</a>
         
         <script>
             var blob = new Blob(["Hello world!"], {type: "application/octet-stream"});
