--- a/web_extensions/index.html
+++ b/web_extensions/index.html
@@ -57,6 +57,10 @@
             <span class="file-icon">📦</span>
             <a href="webkit-test-extension.zip" download>webkit-test-extension.zip</a>
         </li>
+        <li>
+            <span class="file-icon">📦</span>
+            <a href="my-first-web-extension.zip" download>my-first-web-extension.zip</a>
+        </li>
     </ul>
 </body>
 </html>
