--- a/web_extensions/index.html
+++ b/web_extensions/index.html
@@ -43,7 +43,7 @@
     </style>
 </head>
 <body>
-    <h1>Web Extensions Downloads</h1>
+    <h1>Test Web Extensions Downloads</h1>
     <ul>
         <li>
             <span class="file-icon">📦</span>
